Add a signup functinality

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MONGO_URI=mongodb+srv://oussamalamrabet518:YgJYHk0kX71iScni@cluster0.bajgd.mongodb.net/twitter?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
+JWT_SECRET=sectwitter
+NODE_ENV=development
