--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ MONGO_URI=mongodb+srv://oussamalamrabet518:YgJYHk0kX71iScni@cluster0.bajgd.mongo
 PORT=5000
 JWT_SECRET=sectwitter
 NODE_ENV=development
+CLOUDINARY_CLOUD_NAME=dxhw4mm3p
+CLOUDINARY_API=745767343957771
+CLOUDINARY_API_SECRET=bq4dif1wbizN4ieL2Ba3NjACMIc
