--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.59.19",
     "axios": "^1.7.7",
     "formik": "^2.4.6",
     "framer": "^2.4.1",
@@ -17,6 +18,7 @@
     "motion": "^10.18.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-spinners": "^0.14.1",
