--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-spinners": "^0.14.1",
+    "twitter-clone": "file:..",
     "video-react": "^0.16.0",
     "yup": "^1.4.0"
   },
