--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "set NODE_ENV=development && nodemon backend/server.js",
     "start": " node backend/server.js",
-    "build": "npm install  && npm install  --prefix frontend && npm run build --prefix frontend"
+    "build": "npm install --legacy-peer-deps  && npm install --legacy-peer-deps --prefix frontend && npm run build --prefix frontend"
   },
   "keywords": [],
   "author": "",
