--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "backend/server.js",
   "scripts": {
-    "dev": "set NODE_ENV=development && nodemon backend/server.js",
+    "dev": "nodemon backend/server.js",
     "start": " node backend/server.js",
     "build": "npm install --legacy-peer-deps  && npm install --legacy-peer-deps --prefix frontend && npm run build --prefix frontend"
   },
